# tanagram_take_home

./: README.md  pyproject.toml
src/: main.py
src/config/: settings.py
src/core/: AIAgent.py  LLMDiffAnalyzer.py
src/core/models/: Violation.py
src/services/: LLMCallService.py
tests/: pr_diff.txt  violation_prompt.txt
